GNOME Bugzilla – Bug 771269
Open in new tab / window doesn't work on unmounted file systems
Last modified: 2017-04-22 09:54:59 UTC
Current Behavior: When selecting the "Other Locations" view in the left side bar, a list of local storage devices (various file systems on local hard disks, etc) is shown. When these file systems haven't been mounted yet, a password is requested for the privileges to mount them, and the contents are displayed. If you right click on such a file system before mounting it, and select either "Open in New Tab" or "Open in New Window," nothing apparently happens. There is no visual feedback, and the action is not carried out. Expected Behavior: When selecting "Open in New Tab" or "Open in New Window" on an unmounted file system, the password should be requested in the same way that it is when that unmounted file system is double-clicked on, prior to carrying out the requested action. This bug occurs in Nautilus version 3.21.91.1 In case it matters, the file systems which trigger this bug are NTFS partitions which are not listed in /etc/fstab. Feel free to ask for any additional details.
Created attachment 350229 [details] [review] gtkplacesview: Fix unmounted open in tab/window We were send the "open-location" signal without mounting first the location if necessary, making the open in tab/window context menu not work for those. This patch makes sure we mount the location before emitting the signal.
Moving to gtk+. Also, reviewed by Georges on IRC already, thanks!
pushed to master and gtk3 Attachment 350229 [details] pushed as 73d13fb - gtkplacesview: Fix unmounted open in tab/window